--- a/src/porfolio/index.html
+++ b/src/porfolio/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manuel Rodriguez Portfolio Website</title>
+    <title>DevJane Portfolio Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
         integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />
-    <link rel="stylesheet" href="./css/styles.css">
+
     <!-- Update these with your own fonts -->
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,900|Source+Sans+Pro:300,900&display=swap"
         rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css">
+
 </head>
 
 <body>
@@ -19,40 +22,42 @@
         <div class="logo">
             <img src="img/devjane.png" alt="">
         </div>
-        <button class="nav-toogle" aria-label="toogle navigation"><span class="hamburger"></span></button>
+        <button class="nav-toggle" aria-label="toggle navigation">
+            <span class="hamburger"></span>
+        </button>
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
                 <li class="nav__item"><a href="#services" class="nav__link">My Services</a></li>
                 <li class="nav__item"><a href="#about" class="nav__link">About me</a></li>
-                <li class="nav__item"><a href="#" class="nav__link">Projects</a></li>
+                <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
             </ul>
         </nav>
     </header>
-    <!-- Intro -->
+
+    <!-- Introduction -->
     <section class="intro" id="home">
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Manuel Rodriguez</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">
-            DevOps Engineer
-        </p>
-        <img src="./img/me2.jpg" alt="A passport picture of Manuel ">
+        <p class="section__subtitle section__subtitle--intro">DevOps & Cloud Engineer</p>
+        <img src="img/me2.jpg" alt="a picture of Jane Smith smiling" class="intro__img">
     </section>
+
 
     <!-- My services -->
     <section class="my-services" id="services">
         <h2 class="section__title section__title--services">What I do</h2>
         <div class="services">
             <div class="service">
-                <h3>DevOps Engineer</h3>
+                <h3>Design + Development</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
             </div> <!-- / service -->
 
             <div class="service">
-                <h3>Cloud Engineer</h3>
+                <h3>E-Commerce</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat.</p>
@@ -63,49 +68,66 @@
         <a href="#work" class="btn">My Work</a>
     </section>
 
-    <!-- about me -->
+
+    <!-- About me -->
     <section class="about-me" id="about">
         <h2 class="section__title section__title--about">Who I am</h2>
-        <p class="section__subtitle section__subtitle--about">DevOps engineer based out of London</p>
-        <div class="about-me__body">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia similique doloribus dolore voluptate nisi
-                dignissimos laboriosam ducimus rem ab veniam excepturi labore, velit explicabo asperiores quo corporis,
-                necessitatibus reiciendis sapiente.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In quia aperiam quas repudiandae, quam cumque,
-                accusantium aut architecto dolor expedita voluptate harum dignissimos laboriosam cupiditate. Quos
-                voluptates saepe velit atque!</p>
+        <p class="section__subtitle section__subtitle--about">DevOps & Cloud Engineer based out of London</p>
 
+        <div class="about-me__body">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
         </div>
-        <img src="./img/me.jpg" alt="Manuel walking under a blue sky">
+
+        <img src="img/dev-jane-02.jpg" alt="Jane leaning against a bus" class="about-me__img">
     </section>
-    <!-- my work -->
+
+    <!-- My Work -->
     <section class="my-work" id="work">
         <h2 class="section__title">My work</h2>
         <p class="section__subtitle"></p>
+
         <div class="portfolio">
-            <a href="" class="portfolio__item">
-                <img src="img/portfolio-01.jpg" class="porfolio__img" alt="">
+            <!-- Portfolio item 01 -->
+            <a href="#" class="portfolio__item">
+                <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
-                <img src="img/portfolio-02.jpg" class="porfolio__img" alt="">
+
+            <!-- Portfolio item 02 -->
+            <a href="#" class="portfolio__item">
+                <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
-                <img src="img/portfolio-03.jpg" class="porfolio__img" alt="">
+
+            <!-- Portfolio item 03 -->
+            <a href="#" class="portfolio__item">
+                <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
             </a>
-            <a href="" class="portfolio__item">
-                <img src="img/portfolio-04.jpg" class="porfolio__img" alt="">
+
+            <!-- Portfolio item 04 -->
+            <a href="#" class="portfolio__item">
+                <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
             </a>
+
+
         </div>
     </section>
-    <!-- footer -->
+
+
+    <!-- Footer -->
     <footer>
-        <a href="mailto:manuel@manrodri.com" class="footer__link">manuel@manrodri.com</a>
+        <!-- replace with your own email address -->
+        <a href="mailto:hello@jane.dev" class="footer__link">hello@jane.dev</a>
         <ul class="social-list">
-            <li class="social-list__item"><a href="https://linkedin.com" class="social-list__link">a</a></li>
-            <li class="social-list__item"><a class="social-list__link" href="https://github.com">b</a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://codepen.io">a</a></li>
+            <li class="social-list__item">b<a class="social-list__link" href="http://dribbble.com"></a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://twitter.com">c</a></li>
+            <li class="social-list__item"><a class="social-list__link" href="https://github.com">d</a></li>
         </ul>
     </footer>
-
 
 </body>
 
