--- a/src/porfolio/index.html
+++ b/src/porfolio/index.html
@@ -134,11 +134,16 @@
     <!-- replace with your own email address -->
     <a href="mailto:manuel@manrodri.com" class="footer__link">manuel@manrodri.com</a>
     <ul class="social-list">
-        <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"> <i class="fab fa-codepen"></i></a></li>
-        <li class="social-list__item"><a class="social-list__link" href="http://linkedin.com"><i class="fab fa-linkedin"></i></a></li>
-        <li class="social-list__item"><a class="social-list__link" href="https://github.com"><i class="fab fa-github"></i></a></li>
+        <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"> <i
+                class="fab fa-codepen"></i></a></li>
+        <li class="social-list__item"><a class="social-list__link" href="http://linkedin.com"><i
+                class="fab fa-linkedin"></i></a></li>
+        <li class="social-list__item"><a class="social-list__link" href="https://github.com"><i
+                class="fab fa-github"></i></a></li>
     </ul>
 </footer>
+
+<script src="js/index.js"></script>
 
 </body>
 
