--- a/web/porfolio/index.html
+++ b/web/porfolio/index.html
@@ -23,7 +23,7 @@
 <body>
 <header>
     <div class="logo">
-        <img src="img/devjane.png" alt="">
+        <img src="img/logo.png" alt="">
     </div>
     <button class="nav-toggle" aria-label="toggle navigation">
         <span class="hamburger"></span>
@@ -53,14 +53,14 @@
     <h2 class="section__title section__title--services">What I do</h2>
     <div class="services">
         <div class="service">
-            <h3>Design + Development</h3>
+            <h3>DevOps Engineer</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat.</p>
         </div> <!-- / service -->
 
         <div class="service">
-            <h3>E-Commerce</h3>
+            <h3>Cloud Engineer</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                 aliquip ex ea commodo consequat.</p>
@@ -86,7 +86,7 @@
             ex ea commodo consequat.</p>
     </div>
 
-    <img src="img/dev-jane-02.jpg" alt="Jane leaning against a bus" class="about-me__img">
+    <img src="img/me3.jpg" alt="Jane leaning against a bus" class="about-me__img">
 </section>
 
 <!-- My Work -->
@@ -96,31 +96,31 @@
 
     <div class="portfolio">
         <!-- Portfolio item 01 -->
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-1.html" class="portfolio__item">
             <img src="img/portfolio-01.jpg" alt="" class="portfolio__img">
         </a>
 
         <!-- Portfolio item 02 -->
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-2.html" class="portfolio__item">
             <img src="img/portfolio-02.jpg" alt="" class="portfolio__img">
         </a>
 
         <!-- Portfolio item 03 -->
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-3.html" class="portfolio__item">
             <img src="img/portfolio-03.jpg" alt="" class="portfolio__img">
         </a>
 
         <!-- Portfolio item 04 -->
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-4.html" class="portfolio__item">
             <img src="img/portfolio-04.jpg" alt="" class="portfolio__img">
         </a>
         <!-- Portfolio item 05 -->
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-5.html" class="portfolio__item">
             <img src="img/portfolio-05.jpg" alt="" class="portfolio__img">
         </a>
 
         <!-- Portfolio item 06 -->
-        <a href="#" class="portfolio__item">
+        <a href="portfolio-6.html" class="portfolio__item">
             <img src="img/portfolio-06.jpg" alt="" class="portfolio__img">
         </a>
 
