cookie consent page ready

--- a/web/porfolio/index.html
+++ b/web/porfolio/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DevJane Portfolio Website</title>
+    <link rel="shortcut icon" type="image/jpg" href="img/ficon.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
           integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous"/>
@@ -37,6 +38,14 @@
         </ul>
     </nav>
 </header>
+
+
+<div id="consent-popup" class=" consent-popup hidden">
+    <p>By using this site you agree to our <a href="#">Terms and conditions</a>.
+        Please accept <a id="accept">Accept</a> these before using our site.
+    </p>
+
+</div>
 
 <!-- Introduction -->
 <section class="intro" id="home">
@@ -143,6 +152,7 @@
     </ul>
 </footer>
 
+<script src="js/consent.js"></script>
 <script src="js/index.js"></script>
 
 </body>
