cookie consent page ready

--- a/web/porfolio/index.html
+++ b/web/porfolio/index.html
@@ -40,11 +40,12 @@
 </header>
 
 
-<div id="consent-popup" class=" consent-popup hidden">
-    <p>By using this site you agree to our <a href="#">Terms and conditions</a>.
-        Please accept <a id="accept">Accept</a> these before using our site.
-    </p>
 
+<div id="consent-popup" class=" consent-popup ">
+    <div class="consent-popup-content">
+        <p>By using this site you agree to our <a class="consent-popup__link" href="coockie-consent.html">Terms and conditions</a>.</p>
+    <a href="#" class="btn btn-accept" id="accept">Accept</a>
+    </div>
 </div>
 
 <!-- Introduction -->
