index.html ready and some minor changed to ci-cd code

--- a/web/porfolio/index.html
+++ b/web/porfolio/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevJane Portfolio Website</title>
+    <title>manrodri Portfolio Website</title>
     <link rel="shortcut icon" type="image/jpg" href="img/ficon.png"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
@@ -64,16 +64,15 @@
     <div class="services">
         <div class="service">
             <h3>DevOps Engineer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+            <p>IT professional with experience overseeing deployments and code releases. I have hard and soft skills which help me to overcome the
+            traditional barriers between software development, QA and IT operations teams and foster collaborative, holistic environment</p>
         </div> <!-- / service -->
 
         <div class="service">
             <h3>Cloud Engineer</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
+            <p>I have extensive experience in the AWS platform. Including planning, managing, designing, monitoring and developing products.
+            I have worked with traditional and serverless based deployments and implemented a multi-account production enviroment for a large
+            organisation.</p>
         </div> <!-- / service -->
 
     </div> <!-- / services -->
@@ -88,12 +87,10 @@
     <p class="section__subtitle section__subtitle--about">DevOps & Cloud Engineer based out of London</p>
 
     <div class="about-me__body">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo consequat.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo consequat.</p>
+        <p>I am a passionate IT professional with hanger for learnig and making a difference with my work. Since I became familiar with the challenges
+        of deploying software I felt in love with the DevOps culture. I also enjoy working with Linux servers. I strongly believed the public clouds are the
+        future of IT infrastructure; get on board now or loose the train.</p>
+        <p>I live in London, when I am not working you can find me down at the gym, enjoying plays, musicals and opera or more likely at the local pub if I am honest...</p>
     </div>
 
     <img src="img/me3.jpg" alt="Jane leaning against a bus" class="about-me__img">
@@ -144,8 +141,7 @@
     <!-- replace with your own email address -->
     <a href="mailto:manuel@manrodri.com" class="footer__link">manuel@manrodri.com</a>
     <ul class="social-list">
-        <li class="social-list__item"><a class="social-list__link" href="https://codepen.io"> <i
-                class="fab fa-codepen"></i></a></li>
+
         <li class="social-list__item"><a class="social-list__link" href="http://linkedin.com"><i
                 class="fab fa-linkedin"></i></a></li>
         <li class="social-list__item"><a class="social-list__link" href="https://github.com"><i
